feat: 更新根路由
This is the commit message #2:

feat: 更新根路由

feat: 修正 DEPLOY_SECRET

feat: 修正 404 網址

--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
 
     <meta
       http-equiv="refresh"
-      content="0; URL='https://chuchushooes.github.io/todolist-react-starter'"
+      content="0; URL='[https://chuchushooes.github.io/todolist-react-starter]'"
     />
     <title>Todolist 404 redirect</title>
   </head>
